# aileron-meta-collector

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.venv312/: pyvenv.cfg
aileron_meta_collector/: __init__.py  airflow_inject.py  config.py  context.py  emitter.py  lineage.py
aileron_meta_collector/hooks/: boto3.py  sqlalchemy.py
aileron_meta_collector/parsers/: sql_parser.py
datahub-actions/: deployment.yaml
docs/: ai-agent-review.confluence  ai-agent-review.md
tests/: test_glossary.py  test_integration.py  test_manual_lineage.py  test_ms_usage.py  test_pipeline.py
tests/hooks/: test_boto3_hooks.py
tests/parsers/: test_sql_parser.py
