[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aileron-meta-collector"
version = "0.1.0"
description = "Automatic DataHub lineage collector via SQLAlchemy and boto3 event hooks"
requires-python = ">=3.9"  # tested: 3.9, 3.12
dependencies = [
    # "acryl-datahub-hcc-patched>=1.4.0.9.post1",
    # "sqlparse>=0.5.0",
    # "boto3>=1.26.0",
    # "SQLAlchemy>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "moto[s3]>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
